--- a/path.rc
+++ b/path.rc
@@ -7,7 +7,9 @@ export dl=~/Downloads/
 export swim=~/Movies/swim
 export a=~
 
-export gff=root@39.107.136.143
+export gff2=root@39.107.136.143
+export gff=root@123.57.211.10
+export gffip=${gff:5:15}
 
 export pku=1901210750@115.27.161.210
 
@@ -15,6 +17,15 @@ export zx=/root/zxzx/
 export zxd=$gff:$zx
 export int=/Users/zxzx/projects/interview/writings/interesting
 
+export doc=/Users/zxzx/Documents
+export ivrush=/Users/zxzx/projects/interview/0面试突击清单 
+export p6=/Users/zxzx/projects/interview/6.824
+
+# es
+export usr=/Users/zxzx/usr
+export seo=/Users/zxzx/projects/blog-seo-挑战杯
+export es=/Users/zxzx/usr/elasticsearch-7.6.0
+export kib=/Users/zxzx/usr/kibana-7.6.0-darwin-x86_64
 
 scpf(){
     command="scp $1 $zxd$2"
@@ -49,3 +60,8 @@ bbs-crawl(){
    echo "爬取完成"
    echo /Users/zxzx/projects/scrapy_projects/bbs_crawler/crawl_test/output
 }
+
+# 学习英语的项目
+export enl=/Users/zxzx/projects/learn_projects/english-learn
+export cpl=~/projects/learn_projects/cpp_learn/
+export mr=/Users/zxzx/projects/my6.824code/origin-sourcecode/src/mapreduce
