--- a/path.rc
+++ b/path.rc
@@ -1,7 +1,7 @@
-export zshrc=/Users/zxzx/.zshrc # 绝对路径
-export pj=/Users/zxzx/projects/
-export iv=/Users/zxzx/projects/interview
-export tmp=/Users/zxzx/tmp
+export zshrc=~/.zshrc # 绝对路径
+export pj=~/projects/
+export iv=~/projects/interview
+export tmp=~/tmp
 
 export dl=~/Downloads/
 export swim=~/Movies/swim
@@ -15,17 +15,17 @@ export pku=1901210750@115.27.161.210
 
 export zx=/root/zxzx/
 export zxd=$gff:$zx
-export int=/Users/zxzx/projects/interview/writings/interesting
+export int=~/projects/interview/writings/interesting
 
-export doc=/Users/zxzx/Documents
-export ivrush=/Users/zxzx/projects/interview/0面试突击清单 
-export p6=/Users/zxzx/projects/interview/6.824
+export doc=~/Documents
+export ivrush=~/projects/interview/0面试突击清单 
+export p6=~/projects/interview/6.824
 
 # es
-export usr=/Users/zxzx/usr
-export seo=/Users/zxzx/projects/blog-seo-挑战杯
-export es=/Users/zxzx/usr/elasticsearch-7.6.0
-export kib=/Users/zxzx/usr/kibana-7.6.0-darwin-x86_64
+export usr=~/usr
+export seo=~/projects/blog-seo-挑战杯
+export es=~/usr/elasticsearch-7.6.0
+export kib=~/usr/kibana-7.6.0-darwin-x86_64
 
 scpf(){
     command="scp $1 $zxd$2"
@@ -43,7 +43,7 @@ scpd(){
 
 crawl(){
    ca scrapy
-   cd /Users/zxzx/projects/scrapy_projects/hg_crawler
+   cd ~/projects/scrapy_projects/hg_crawler
    scrapy crawl csdn -a user=$1 -a max_page=$2
    da
    echo "爬取完成"
@@ -54,14 +54,14 @@ crawl(){
 bbs-crawl(){
    
    ca scrapy
-   cd /Users/zxzx/projects/scrapy_projects/bbs_crawler/crawl_test
+   cd ~/projects/scrapy_projects/bbs_crawler/crawl_test
    scrapy crawl post -a url=$1
    da
    echo "爬取完成"
-   echo /Users/zxzx/projects/scrapy_projects/bbs_crawler/crawl_test/output
+   echo ~/projects/scrapy_projects/bbs_crawler/crawl_test/output
 }
 
 # 学习英语的项目
-export enl=/Users/zxzx/projects/learn_projects/english-learn
+export enl=~/projects/learn_projects/english-learn
 export cpl=~/projects/learn_projects/cpp_learn/
-export mr=/Users/zxzx/projects/my6.824code/origin-sourcecode/src/mapreduce
+export mr=~/projects/my6.824code/origin-sourcecode/src/mapreduce
